--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.willywonka125</groupId>
   <artifactId>SignolegisRPG</artifactId>
-  <version>0.2</version>
+  <version>0.2.3</version>
   <packaging>jar</packaging>
 
   <name>SignolegisRPG</name>
@@ -18,6 +18,10 @@
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
+       <repository>
+            <id>citizensapi-repo</id>
+            <url>http://repo.citizensnpcs.co/</url>
+        </repository>
    </repositories>
 
   <dependencies>
@@ -32,5 +36,11 @@
             <artifactId>bukkit</artifactId>
             <version>1.8.7-R0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+            <groupId>net.citizensnpcs</groupId>
+            <artifactId>citizensapi</artifactId>
+            <version>2.0.9-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
   </dependencies>
 </project>
